# libstf

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  sim_setup.sh
examples/01_output_buffer_manager/: CMakeLists.txt  README.md
examples/01_output_buffer_manager/src/: main.cpp
hardware/: CMakeLists.txt
hardware/src/hdl/: common.sv  data_interfaces.sv  libstf_macros.svh
hardware/src/hdl/axi/: axi_demultiplexer.sv  axi_multiplexer.sv  axi_width_converter.sv
hardware/src/hdl/buffer/: stream_buffer_interfaces.sv  stream_buffer_reader.sv  stream_buffer_writer.sv  stream_reader.sv
hardware/src/hdl/config/: generic_config.sv  mem_config.sv  stream_config.sv  write_config_splitter.sv
hardware/src/hdl/config/registers/: config_read_register_file.sv  config_write_ready_register.sv
hardware/src/hdl/crossbar/: creditor.sv  decoupler.sv  reorder.sv  tagged_duplicator.sv  tagged_multiplexer.sv
hardware/src/hdl/dict/: deduplicate_stage.sv  typed_dictionary.sv
hardware/src/hdl/fifo/: fifo.vhd  multi_insert_fifo_axi.sv
hardware/src/hdl/normalization/: data_compactor.sv
hardware/src/hdl/output/: notify_meta_intf_adapter.sv  output_writer.sv  stream_writer.sv  stream_writer_interface.sv
hardware/src/hdl/stream/: data_adapters.sv  data_duplicator.sv  data_multiplexer_typed.sv  data_sink.sv  data_width_converter.sv
hardware/src/hdl/test/: cyclic_drivers.sv
hardware/src/hdl/util/: demultiplexer.sv  meta_intf_arbiter.sv  ready_valid_helpers.sv  shift_register.vhd  skid_buffer.sv  sorted_seq_to_bitmask.sv  stream_profiler.sv
hardware/unit-tests/: dict_test.py  normalizer_test.py  sorted_seq_to_bitmask_test.py  stream_buffer_test.py  typed_dict_test.py
hardware/unit-tests/libstf_utils/: configured_test_case.py
hardware/unit-tests/vfpga_tops/: dict_test.sv  normalizer_test.sv  output_writer_test.sv  sorted_seq_to_bitmask_test.sv  stream_buffer_test.sv  typed_dict_test.sv
scripts/: install_caliper.sh  install_jemalloc.sh
software/: CMakeLists.txt
software/cmake/: FindJemalloc.cmake
software/libstf/: buffer.cpp  buffer.hpp  common.cpp  common.hpp  configuration.cpp  configuration.hpp  memory_pool.cpp  memory_pool.hpp  output_buffer_manager.cpp  output_buffer_manager.hpp  output_handle.cpp  output_handle.hpp  profiling.cpp  profiling.hpp  tlb_manager.cpp  tlb_manager.hpp  util.cpp  util.hpp
software/src/libstf/: buffer.cpp  buffer.hpp  common.cpp  common.hpp  configuration.cpp  error_handling.hpp  memory_pool.cpp  tlb_manager.cpp  tlb_manager.hpp
src/hdl/: common.sv  data_interfaces.sv  libstf_macros.svh
src/hdl/axi/: axi_demultiplexer.sv  axi_width_converter.sv
src/hdl/config/: config_interfaces.sv  config_macros.svh  config_splitter.sv  global_config.sv  mem_config.sv  read_config_splitter.sv  stream_config.sv  write_config_splitter.sv
src/hdl/crossbar/: coupler.sv  creditor.sv  crossbar.sv  reorder.sv  reorder_decoupler.sv  reorder_enumerator.sv  serial_decoupler.sv  tagged_duplicator.sv  tagged_multiplexer.sv
src/hdl/dict/: deduplicate.sv  deduplicate_stage.sv  dictionary.sv  dictionary_bank.sv  duplicate.sv  typed_dictionary.sv
src/hdl/fifo/: fifo.vhd  fifo_axi.sv  multi_insert_fifo.vhd  multi_insert_fifo_axi.sv
src/hdl/hashing/: murmur_hasher.sv  stream_hasher.sv
src/hdl/normalization/: barrel_shifter.sv  constant_shifter.sv  data_compactor_level.sv  data_normalizer.sv
src/hdl/output/: output_writer.sv  stream_writer.sv
src/hdl/stream/: data_adapters.sv  data_enumerator.sv  (+6 more)
unit-tests/: dict_test.py  dict_test.sv  dictionary_test.py  dictionary_test.sv  output_writer_test.py  output_writer_test.sv  typed_dict_test.py
unit-tests/libstf_utils/: common.py  fpga_configuration.py  memory_manager.py  output_writer_test_case.py
unit-tests/utils/: common.py  db_operator_test_case.py  fpga_configuration.py  memory_manager.py  output_writer_test_case.py
unit-tests/vfpga_tops/: dict_test.sv  normalizer_test.sv  output_writer_test.sv  typed_dict_test.sv
(+15 files in other folders)
